# cpp-hw1-VK-EDU

./: CMakeLists.txt  README.md
exe/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/integr/: ustring_test.py
tests/unit/: ustring_test.cpp
ustring/: CMakeLists.txt  ustring.cpp  ustring.hpp
